--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.41",
+    "expo-dev-client": "~5.0.15",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "lodash": "^4.17.21",
